# x-teaming

./: README.md  demo.ipynb  generate_attack_plans.py  generate_safe_responses.py  main.py  pyproject.toml
agents/: attacker_agent.py
analytics/: metrics.py
xguard/: config.yaml  generate_attack_plans.py  reformat_convos.py
